<resources>
    <string name="app_name">Cinemo App</string>
    <string name="app_name_short">Cinemo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_genre">Genre</string>
    <string name="label_movie_name">Movie Name</string>
    <string name="label_date">October 5, 2021</string>
    <string name="label_view_more">View More</string>
    <string name="label_movie_finder">Movie Finder</string>
    <string name="label_my_favorite">My Favorite</string>
    <string name="label_add_to_favorite">Add to Favorite</string>
    <string name="label_remove_from_favorite">Remove from Favorite</string>
    <string name="label_add_movie_to_favorite">Add movie to Favorite</string>
    <string name="label_remove_movie_from_favorite">Remove movie from Favorite</string>
</resources>