<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.MovieDetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_movie"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name_short"
        app:titleTextAppearance="@style/TextTitleToolbar"
        app:titleTextColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/constraint_no_size"
        android:layout_height="@dimen/constraint_no_size"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_movie">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_padding_16">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_movie_poster_detail"
                android:layout_width="260dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="9:16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:shapeAppearance="@style/ComponentsShapeAppearance_RoundedSmall"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_genre_detail"
                style="@style/TextGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:text="@string/label_genre"
                android:textColor="@color/black"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/siv_movie_poster_detail" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_name"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_8"
                android:text="@string/label_movie_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_genre_detail" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_detail"
                style="@style/TextBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:text="@string/label_date"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_favorite"
                style="@style/BaseCircularButtonNoStroke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:backgroundTint="@color/colorPink"
                android:paddingHorizontal="@dimen/margin_padding_16"
                android:text="@string/label_add_to_favorite"
                android:textAppearance="@style/TextTitle"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_remove_favorite"
                style="@style/BaseCircularButtonNoStroke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_16"
                android:backgroundTint="@color/colorDeepGray"
                android:paddingHorizontal="@dimen/margin_padding_16"
                android:text="@string/label_remove_from_favorite"
                android:textAppearance="@style/TextTitle"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>